# aws_serverless_patterns

./: .gitignore  README.md  main.py  pyproject.toml  verify-dependencies.sh
module-01-intro/: README.md  samconfig.toml  template-explicit-api.yaml  template.yaml
module-01-intro/events/: add_user.json  get_user.json
module-01-intro/src/add_user/: app.py
module-01-intro/src/get_user/: app.py
module-02-users-sync/: README.md  samconfig.toml  template.yaml
module-02-users-sync/events/: create_user.json  delete_user.json  get_user.json  list_users.json  update_user.json
module-02-users-sync/src/api/: users.py
module-02-users-sync/src/authorizer/: authorizer.py  requirements.txt
module-02-users-sync/tests/: conftest.py
module-02-users-sync/tests/integration/: test_api.py
module-02-users-sync/tests/unit/: test_authorizer.py  test_users.py
