[project]
name = "aws-serverless-patterns-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.260.0",
    "aws-lambda-powertools>=3.29.0",
    "boto3>=1.43.34",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "moto>=5.0",          # mock AWS (DynamoDB) for unit tests
    "requests>=2.31",     # integration tests against the deployed API
    "python-jose>=3.3.0", # imported by the Lambda authorizer under test
]

[tool.pytest.ini_options]
markers = [
    "integration: hits a deployed API; requires API_BASE_URL + ID_TOKEN env vars",
]
